Implement code changes to enhance functionality and improve performance

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,309 +1,10 @@
+---
+import BannerSlider from "./index_page/BannerSlider.astro"
+---
       <main class="flex-grow bg-background pt-[106px]">
-        <!-- Story Section -->
-        <section class="container pt-6 lg:pt-13 2xl:pt-18">
-          <div class="swiper story-slider py-4">
-            <div class="swiper-wrapper !px-px py-2">
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story1.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    تیکا ؛ تست حافظه! تیکا ؛ تست حافظه!
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story2.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    رکوردر صدای دانشجویی!
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story3.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    خوشگل‌ترین ماوس دیجی‌کالا🖱
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story4.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    تخته برش ریور
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story5.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    خمیردندان و مسواکِ کودکِ
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story6.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    پاور تیکا ؛ تست حافظه!
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story7.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    اسباب کشی‌تو راحت می‌کنه
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story8.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    جورابای درست حسابی
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story9.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    آیس کافی وانیلی🍧🥛
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story10.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    یه تجربه ی متفاوت !!!!
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story11.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    راهنمای خرید هندزفری
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story12.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    چرا دهان‌شویه؟🦷
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div
-                  type="button"
-                  data-modal-target="story-modal"
-                  data-modal-toggle="story-modal"
-                  class="flex cursor-pointer flex-col items-center justify-center gap-2"
-                >
-                  <!-- Thumbnail -->
-                  <div
-                    class="size-20 overflow-hidden rounded-full border-[3px] border-white ring-2 ring-warning"
-                  >
-                    <img src="/src/assets/images/story13.jpg" alt="story 1" />
-                  </div>
-                  <!-- Title -->
-                  <p class="line-clamp-2 w-20 text-center text-xs">
-                    متر 5 متری از برند FISCO
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div
-              class="swiper-button-next main-slider-nav-button hidden md:flex"
-            ></div>
-            <div
-              class="swiper-button-prev main-slider-nav-button hidden md:flex"
-            ></div>
-          </div>
-        </section>
-        <!-- Banners Section -->
-        <section>
-          <div class="swiper main-banner group">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <a href="#">
-                  <!-- Desktop -->
-                  <img
-                    src="/src/assets/images/banner-1.webp"
-                    alt="Banner 1"
-                    class="mx-auto hidden aspect-[2/1] object-cover sm:block md:aspect-[3/1] lg:aspect-auto"
-                  />
-                  <!-- Mobile -->
-                  <img
-                    src="/src/assets/images/banner-small-1.webp"
-                    alt="Banner 2"
-                    class="aspect-[2/1] object-cover sm:hidden"
-                  />
-                </a>
-              </div>
-              <div class="swiper-slide">
-                <a href="#">
-                  <!-- Desktop -->
-                  <img
-                    src="/src/assets/images/banner-2.webp"
-                    alt="Blesser"
-                    class="mx-auto hidden aspect-[2/1] object-cover sm:block md:aspect-[3/1] lg:aspect-auto"
-                  />
-                  <!-- Mobile -->
-                  <img
-                    src="/src/assets/images/banner-small-2.webp"
-                    alt="Blesser"
-                    class="aspect-[2/1] object-cover sm:hidden"
-                  />
-                </a>
-              </div>
-            </div>
-            <div
-              class="swiper-button-next main-banner-nav-button !right-[50px]"
-            ></div>
-            <div class="swiper-button-prev main-banner-nav-button"></div>
-            <div class="swiper-pagination"></div>
-          </div>
-        </section>
-
+        <!-- Stories Are No use now -->
+        <!-- <Stories /> -->
+        <BannerSlider />
         <!-- Special Sale Section -->
         <section class="container py-10">
           <div
