Replace Welcome component with Home component in index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Navbar from '../components/Navbar.astro';
-import Welcome from '../components/Welcome.astro';
+import Home from '../components/Home.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/css/global.css";
 import "../styles/css/dependencies/swiper.min.css";
@@ -13,5 +13,5 @@ import "../styles/css/reset.css";
 
 <Layout>
 	<Navbar />
-	<Welcome />
+	<Home />
 </Layout>
