--- a/src/components/products/Product.astro
+++ b/src/components/products/Product.astro
@@ -1,5 +1,6 @@
 ---
-const { product } = Astro.props;
+import type { Product as ProductType } from "../../types/product.d";
+const  product: ProductType = Astro.props.product
 ---
 
 <!-- Product -->
@@ -7,7 +8,7 @@ const { product } = Astro.props;
   class="border-gradient relative rounded-[--product-card-radius] p-px [--product-card-radius:theme(borderRadius.2xl)] before:absolute before:-inset-px before:h-[calc(100%+2px)] before:w-[calc(100%+2px)] before:rounded-[--product-card-radius] before:content-['']"
 >
   <a
-    href={product.link || "#"}
+    href={product.url ? product.url:  "#"}
     class="relative block overflow-hidden rounded-[calc(var(--product-card-radius)-1px)] bg-muted"
   >
     <div class="mb-4 bg-secondary p-2 lg:p-4">
@@ -16,13 +17,13 @@ const { product } = Astro.props;
         <div
           class="absolute right-2 top-0 rounded-b-full bg-warning px-1 py-1.5 text-center text-sm font-medium text-white md:text-base"
         >
-          {product.discount}%
+          {product.discount}
         </div>
       )}
       <!-- Image -->
       <img
-        src={product.image}
-        alt={product.alt}
+        src={product.image.url}
+        alt={product.image.alt}
         class="aspect-[1/1] w-full rounded-xl object-cover"
       />
     </div>
