Update logo image size in login page for better visibility

--- a/src/pages/auth/login.astro
+++ b/src/pages/auth/login.astro
@@ -213,7 +213,7 @@ import Auth from "../../layouts/Auth.astro";
                         <img
                             src="/src/assets/images/logo.png"
                             alt="logo"
-                            class="mx-auto h-10 xs:h-12"
+                            class="mx-auto h-20"
                         />
                     </a>
 
